--- a/src/pages/form/formWizard.css
+++ b/src/pages/form/formWizard.css
@@ -108,6 +108,10 @@
   .overlay-consommation .title-button {
     font-size: 2.9vw;
   }
+
+  .form-questions-tooltip {
+    font-size: 4vw;
+  }
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
@@ -130,6 +134,10 @@
   }
 
   .overlay-consommation .title-button {
+    font-size: var(--tablet-font-size);
+  }
+
+  .form-questions-tooltip {
     font-size: var(--tablet-font-size);
   }
 }
